@@ -17,6 +17,13 @@ What others wrote:
 <ul>
 
 <li>
+The editors of <em>Computer!Totaal</em>, a Dutch computer magazine,
+<a href="@IMAGES@computer-totaal.jpeg">describe LilyPond as</a>:
+&ldquo;Wonderful free (open source) software [..] The sheet music produced
+by LilyPond is exceptionally pretty [..] a very powerful system that
+can do almost anything&rdquo
+
+<li>
   Dave Phillips wrote an introductory article for Linux Journal <em>At
   the sounding edge: LilyPond</em>, parts
 
